# C-Interpreter

./: .gitignore  BUILD.md  CMakeLists.txt  EBNF.txt  build.sh  test.c  test_const.c  test_input.c
ast/: CMakeLists.txt  ast.cpp
include/: ast.h  lexer.h  parser.h  semantic.h
lexer/: CMakeLists.txt  lexer.cpp  lexer.h  test_lexer.cpp
parse/: CMakeLists.txt  ast.cpp  ast.h  parser.cpp  parser.h  test_parser.cpp
semantic/: CMakeLists.txt  semantic.cpp  test_semantic.cpp
